test/expected/command_line-error.out
struct S; explain unsigned int
                             ^
30: error: declaration expected
